sua edit booking/them change room